tests/macros/float/plugin.stderr
error: option `plugin` does not exist for kind `float`
 --> $DIR/plugin.rs:2:45
  |
2 |     let q = inquisition::questions![Float { plugin: todo!() }];
  |                                             ^^^^^^
