tests/macros/float/plugin.rs
fn main() {
    let q = inquisition::questions![Float { plugin: todo!() }];
}
